Hadoop MapReduce Change Log

Trunk (unreleased changes)


    MAPREDUCE-279

    MAPREDUCE-2400. Remove Cluster's dependency on JobTracker via a 
    ServiceProvider for the actual implementation. (tomwhite via acmurthy) 
 
    MAPREDUCE-2628. Add compiled on date to NM and RM info/about page.
 
    MAPREDUCE-2645. Updates to MRv2 INSTALL and README documentation.
    (Josh Wills via vinodkv)

    MAPREDUCE-2633. Add a getCounter(Enum) method to the Counters record. 
    (Josh Wills via sharad)

    Reinstate resolve path fixes for viewfs. (Siddharth Seth via llu)

    Major ASM cleanup. Streamlining classes, interface and events. (vinodkv)

    (1) Faster retries from AM to HistoryServer (2) Correct diagnostics for
    containers. (vinodkv)

    MAPREDUCE-2625. Add version info to nodemanager info page.
    (Jonathan Eagles via llu)

    MAPREDUCE-2618. Fix NPE in 0 map 0 reduce jobs. (Jeffrey Naisbitt via llu)

    Fix some invalid transitions in the RM. (vinodkv via ddas)
    
    Fix diagnostics display for more than 100 apps in RM. (llu)

    Fix class cast exception in release reserved containers in capacity scheduler (mahadev)

    MAPREDUCE-2615. Make killJob go through AM and fix JobSummaryLog.
    (Siddharth Seth via llu)

    Fix for NPE in YarnChild that was causing lots of tasks to fail. (vinodkv)

    Fix for ConcurrentModification exception while iterating through tokens in
    a UGI in ContainerLauncherImpl. (ddas)

    MAPREDUCE-2611. Fix counters, finish times etc. in job history.
    (Siddharth Seth via llu)

    Fixing scheduling deadlock in AM because of incorrect headRoom values from
    RM. The bug happens when AM releases containers and RM decrements current
    memory usage twice for all those containers. (vinodkv)

    Disabling locality-wait in CapacityScheduler for now to prevent uber-slow
    scheduling for apps with no data-locality constraints (sleep-job like). (vinodkv)
